--- a/src/app/home-screen/home-screen.component.scss
+++ b/src/app/home-screen/home-screen.component.scss
@@ -1,19 +1,129 @@
 .title {
 	text-align: center;
+	padding-top: 20px;
+	margin-bottom: 40px;
 }
 
-table {
+mat-table, table {
   width: 100%;
 }
 
+.mat-header-cell {
+	&.setting-header:last-of-type {
+		padding-right: 0;
+	}
+}
+
+th.mat-header-cell {
+	padding-left:5px;
+	padding-right: 5px;
+}
+
+// row selected layout
 .mat-header-row {
 	background-color: #EAEFF0;
 }
 
-.mat-row:hover {
-	background-color: #F5F6F5;
+.activated_menu {
+	display: none;
+}
+
+.blur_bg {
+	display: none;
 }
 
 .mat-cell {
-	text-align: center;
+	cursor: pointer;
+}
+
+.mat-row:hover {
+	background-color: #F5F6F5;
+
+	.activated_menu {
+		display: flex;
+    position: absolute;
+    width: 100px;
+    height: 48px;
+    right: -20px;
+    top: -25px;
+		align-items: center;
+		z-index: 2;
+	}
+
+	.blur_bg {
+		display:block;
+		-webkit-filter: blur(4px);
+		-moz-filter: blur(15px);
+		-o-filter: blur(15px);
+		-ms-filter: blur(15px);
+		filter: blur(15px);
+		opacity: 0.95;
+		background-color: #F5F6F5;
+		position: absolute;
+		width: 150px;
+		height: 48px;
+		right: -20px;
+		top: -25px;
+	}
+
+	.menu-title {
+		color: red;
+		cursor: pointer;
+	}
+
+	.edit {
+		margin-right: 30px;
+	}
+}
+
+.setting-cell {
+	position: relative;
+}
+
+.loader_container {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: rgba(0,0,0,0.5);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.setting-icon {
+	width: 18px;
+	height: 18px;
+	font-size: 18px;
+}
+
+// layout for small resolution
+.row {
+	position: relative;
+	border: 1px solid;
+	border-right: 0;
+	border-left: 0;
+	.cell {
+		display: flex;
+		flex-direction: row;
+		padding-left:10px;
+		padding-right: 10px;
+		.header {
+			flex: 1;
+			font-weight: 500;
+		}
+		.value {
+			flex: 1;
+		}
+	}
+
+	.setting-icon {
+		position: absolute;
+    right: 10px;
+    top: 0;
+    width: 24px;
+    height: 24px;
+    font-size: 24px;
+	}
 }
