[testing] - unit test for appointment-detail screen

--- a/src/app/appointment-detail-screen/appointment-detail-screen.component.html
+++ b/src/app/appointment-detail-screen/appointment-detail-screen.component.html
@@ -7,7 +7,7 @@
 		</div>
 		<div class="item_info">
 			<span class="item_title">Appointment Date: </span>
-			<span>{{appointmentDetail.appointmentDate | appointment:'date'}}</span>
+			<span class="appointment_date_test">{{appointmentDetail.appointmentDate | appointment:'date'}}</span>
 		</div>
 		<div class="item_info">
 			<span class="item_title">Site: </span>
@@ -24,7 +24,7 @@
 		</div>
 		<div class="item_info">
 			<span class="item_title">Status: </span>
-			<span>{{appointmentDetail.status | appointment:'status'}}</span>
+			<span class="status_test">{{appointmentDetail.status | appointment:'status'}}</span>
 		</div>
 		<div class="item_info">
 			<span class="item_title">Claim Number: </span>
@@ -32,7 +32,7 @@
 		</div>
 		<div class="item_info">
 			<span class="item_title">Examination: </span>
-			<span>{{appointmentDetail.examination | appointment:'examination'}}</span>
+			<span class="examination_test">{{appointmentDetail.examination | appointment:'examination'}}</span>
 		</div>
 		<div class="item_info">
 			<span class="item_title">Charge Fee: </span>
